<resources>
    <string name="app_name">MyAppPortfolio</string>

    <string name="about">My Nanodegree Apps!</string>

    <string name="toast_text">This button will launch&#160;</string>
    <string name="toast_capstone">my capstone</string>
    <string name="toast_app">&#160;app</string>

    <!--Button Names-->
    <string name="streamer">Spotify Streamer</string>
    <string name="scores">Scores</string>
    <string name="library">Library</string>
    <string name="build">Build It Bigger</string>
    <string name="reader">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>

</resources>
